fix: account settings dropdown z-index

--- a/src/popup/modules/main/components/AccountSettings/AccountSettings.scss
+++ b/src/popup/modules/main/components/AccountSettings/AccountSettings.scss
@@ -14,7 +14,7 @@
         width: 278px;
         top: 60px;
         right: 20px;
-        z-index: 10;
+        z-index: 11;
         user-select: none;
     }
 
